@@ -3,7 +3,7 @@
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2022-04-03T00:00:00Z",
+      "timestamp": "2022-04-18T00:00:00Z",
       "count": 3,
       "uniques": 1
     }
