@@ -1,5 +1,11 @@
+2022-04-18T16:06:31Z:
+* notice: last 14d: all unq: 3 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 1 1 / 4 2
+* notice: next accum: outdated-all outdated-unq / all unq: 4 2 / 7 3
+* notice: prev json diff // prev day diff: unq all: +1 +3 / -0 -0 // +1 +3 / -0 -0
+
 2022-04-03T08:08:10Z:
 * notice: last 14d: all unq: 3 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 1 1
 * notice: next accum: outdated-all outdated-unq / all unq: 1 1 / 4 2
-* notice: prev json diff // prev day diff: unq all: +1 +3 / -0 -0 // +1 +3 / -0 -0
+* notice: prev json diff // prev day diff: unq all: +1 +3 / -0 -0 // +1 +3 / -0 -0
